--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
+sudo: required
 python:
   - 3.6
 
 install:
   - curl -fSL "https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip" -o terraform.zip
   - unzip terraform.zip -d /tmp/terraform
-  - ln -s /tmp/terraform/terraform /usr/bin/terraform
+  - sudo ln -s /tmp/terraform/terraform /usr/bin/terraform
 
 script:
   - cd deployment/terraform/
