--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - curl -fSL "https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip" -o terraform.zip
   - unzip terraform.zip -d /tmp/terraform
   - sudo ln -s /tmp/terraform/terraform /usr/bin/terraform
+  - pip install -r deployment/picinsight-lambda/requirements.txt -t deployment/picinsight-lambda/
 
 script:
   - cd deployment/terraform/
