--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,13 @@ install:
   - unzip terraform.zip -d /tmp/terraform
   - sudo ln -s /tmp/terraform/terraform /usr/bin/terraform
   - pip install -r deployment/picinsight-lambda/requirements.txt -t deployment/picinsight-lambda/
+  - pip install -r deployment/picinsight-lambda/requirements-test.txt
 
 script:
   - cd deployment/terraform/
   - terraform init && terraform validate
+  - cd ../picinsight-lambda
+  - coverage run python tests.py
+
+after_success:
+  - codecov
