--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "project2",
-    "description": "This project is really great.",
-    "slug": "project2",
+    "name": "picInsight-app",
+    "description": "React-Native app that allows one to classify images",
+    "slug": "picInsight-app",
     "privacy": "public",
     "sdkVersion": "25.0.0",
     "platforms": ["ios", "android"],
