--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "react-navigation": "2.0.0-rc.1"
+    "react-navigation": "2.0.0-rc.1",
+    "aws-amplify": "0.3.3",
+    "uuid": "3.2.1",
+    "buffer": "5.1.0"
   }
 }
