--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
     "react-navigation": "2.0.0-rc.1",
     "aws-amplify": "0.3.3",
+    "aws-amplify-react": "0.1.43",
+    "aws-amplify-react-native": "0.2.9",
     "uuid": "3.2.1",
     "buffer": "5.1.0"
   }
